test/end-to-end/compile-errors/with-else.crow
main void()
	with : (() => info log "done") finally
		info log "inner"
	else
		info log "else"
